<resources>
    <string name="app_name">I buy I sell AI </string>
    <string name="register_sucess">Registo com Sucesso!</string>
    <string name="please_wait"> Por favor, aguarde &#8230;</string>

    <string name="informacaoCurso"> Desenvolvimento de Aplicações Móveis</string>
    <string name="informacaoCurso2"> Licenciatura em Eng. Informática 3º ano, 1º semestre Ano Letivo 2022/23</string>
    <string name="alunoAfonso"> Afonso Graça nº 20944</string>
    <string name="alunoIvan"> Ivan Ferreira nº 20482</string>

    <!--Base application theme. -->
    <style name="AppTheme" parent="Theme.AppCompat">
        <!--Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorPrimary</item>


    </style>
    <!--Base application theme. -->
    <!--serve para tirar a barra de navegaçao -->
    <!--<style name="LoginPage" parent="Theme.AppCompat.NoActionBar">-->
    <style name="LoginPage" parent="Theme.AppCompat">
        <!--Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorPrimary</item>


    </style>


    <string name="email_sent_sucess"> Email enviado com Sucesso</string>
    <string name="StringSlider">I buy I sell AI</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Palavra-Passe</string>
    <string name="login_forgetUrPassword">Esqueceste-te da palavra-passe?</string>
    <string name="login_iniciarSessao">INICIAR SESSÃO</string>
    <string name="login_inscrever_se">Inscrever-se</string>
    <string name="login_acerca_da_ai_shop">ACERCA DA AI SHOP</string>
    <string name="addProd_informa_es_gerais_do_produto">Informações gerais do produto:</string>
    <string name="addProd_nome">Nome</string>
    <string name="addProd_marca_opcional">Marca (Opcional)</string>
    <string name="addProd_preco">Preço</string>
    <string name="addProd_descricao_o_do_produto">Descrição do produto:</string>
    <string name="addProd_tirar_foto">Tirar Foto</string>
    <string name="addProd_carregar_fotos">Carregar Fotos</string>
    <string name="addProd_guardar_produto">Guardar Produto</string>
    <string name="addFoto_tirar_foto">Tirar Foto</string>
    <string name="dadosPessoal_editar_dados">Editar Dados</string>
    <string name="dadosPessoal_logout">Logout</string>


    <!--Registar Utlizador -->
    <string name="pag_registo_voltar_Atraz">Eu já tenho uma conta. Entrar agora</string>
    <string name="pag_registo_criar_conta">CRIAR CONTA</string>
    <string name="pag_registo_pass">Palavra-Passe</string>
    <string name="pag_registo_email">Email</string>
    <string name="pag_registo_primeiro_nome">Primeiro Nome</string>
    <string name="pag_registo_ultimo_nome">Último Nome </string>
    <string name="pag_registo_info">O registo é fácil e grátis! </string>
    <string name="editDados_alterar_dados_pessoais">ALTERAR DADOS PESSOAIS:</string>
    <string name="editDados_primeiro_nome">Primeiro Nome:</string>
    <string name="editDados_ltimo_nome">Último Nome:</string>
    <string name="editDados_introduza_o_primeiro_nome">Introduza o Primeiro Nome</string>
    <string name="editDados_introduza_o_telefone">Introduza o Telefone</string>
    <string name="editDados_telefone">Telefone:</string>
    <string name="editDados_introduza_a_morada">Introduza a Morada</string>
    <string name="editDados_morada">Morada:</string>
    <string name="editDados_introduza_o_ltimo_nome">Introduza o Último Nome</string>
    <string name="editDados_guardar">GUARDAR</string>
    <string name="Sendemail_para">Para:</string>
    <string name="SendEmail_endere_o_de_email">Endereço de email</string>
    <string name="SendEmail_assunto">Assunto:</string>
    <string name="SendEmail_assunto_do_email">Assunto do Email</string>
    <string name="SendEmail_mensagem">Mensagem:</string>
    <string name="SendEmail_introduza_a_mensagem_que_pretende_enviar_ao_vendedor">Introduza a mensagem que pretende enviar ao vendedor</string>
    <string name="SendEmail_enviar_mensagem">Enviar Mensagem</string>
    <string name="ProdutcDetail_contactar_vendedor">Contactar Vendedor</string>
    <string name="ProductDetail_apagar_produto">Apagar Produto</string>
    <string name="ProductDetail_preco">Preço</string>
    <string name="ProductDetail_aqui_fica_a_descricao">Aqui fica a descricao</string>
    <string name="ProductDetail_1000">1000 €</string>
    <string name="MenuDrawer_destaques_no_ai">Destaques no AI</string>
    <string name="MenuDrawer_telem_veis_e_tablets">Telemóveis e Tablets</string>
    <string name="MenuDrawer_m_veis_casa_e_jardim">Móveis, Casa e Jardim</string>
    <string name="MenuDrawer_carros_motos_e_barcos">Carros, motos e barcos</string>
    <string name="MenuDrawer_outras_vendas">Outras Vendas</string>
    <string name="MenuDrawer_perfil">Perfil</string>
    <string name="MenuDrawer_meus_artigos_venda">Meus Artigos à Venda</string>
    <string name="MenuDrawer_vender_artigo">Vender Artigo</string>
    <string name="Categoria_telem_veis_e_tablets">Telemóveis e Tablets</string>
    <string name="Categoria_decora_o">Móveis, casa e jardim</string>
    <string name="Categoria_carros_e_autom_veis">Carros e Automóveis</string>
    <string name="Categoria_diversos">Outras venda</string>

</resources>