<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="119dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/foguetesemfundo" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_edit_background"
            android:hint="@string/login_email"
            android:padding="10dp"
            android:textColorHint="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edit_background"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/imgShowPass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:src="@drawable/show" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView_recuperar_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/login_forgetUrPassword"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/mainCategoryPB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorBlue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:text="@string/login_iniciarSessao"
            android:textAllCaps="false"
            android:textSize="21sp" />



        <TextView
            android:id="@+id/textView_registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_inscrever_se"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView_informacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_acerca_da_ai_shop"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>


</RelativeLayout>