<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.InformationActivity">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="0dp"
        android:src="@drawable/foguetesemfundo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacaoCurso"
            android:textAlignment="center"
            android:textSize="35dp"
            android:layout_centerVertical="true"
            android:textColor="@color/g_circle_shadow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacaoCurso2"
            android:textAlignment="center"
            android:textSize="24dp"
            android:layout_centerVertical="true"
            android:textColor="@color/g_circle_shadow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alunoAfonso"
            android:textAlignment="center"
            android:textSize="22dp"
            android:layout_centerVertical="true"
            android:textColor="@color/g_circle_shadow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alunoIvan"
            android:textAlignment="center"
            android:textSize="22dp"
            android:layout_centerVertical="true"
            android:textColor="@color/g_circle_shadow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Icones https://www.flaticon.com"
            android:textAlignment="center"
            android:textSize="22dp"
            android:layout_centerVertical="true"
            android:textColor="@color/g_circle_shadow"
            />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="220dp" />



    </LinearLayout>

</RelativeLayout>